# geoblocking-demo

backend/: Cargo.toml
backend/src/: main.rs  router.rs  state.rs
backend/src/handlers/: geo.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/(main)/: page.tsx
frontend/src/app/(main)/api/increment/: route.ts
frontend/src/app/(main)/api/random/: route.ts
frontend/src/hooks/: use-geo-random.ts
frontend/src/lib/: api.ts
frontend/src/providers/: query-provider.tsx
frontend/src/types/: api.ts
