[package]
name = "geoblocking-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
